# smileyball-web

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tsconfig.json
src/smileyBall_backend/: main.mo
src/smileyBall_frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
src/smileyBall_frontend/public/fonts/: fontstyle.css
src/smileyBall_frontend/src/: App.jsx
src/smileyBall_frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/smileyBall_frontend/src/app/playground/: page.tsx
src/smileyBall_frontend/src/components/: Emoji.tsx  LoggedIn.tsx  LoggedOut.tsx
src/smileyBall_frontend/src/controlers/: PixelMap.ts
src/smileyBall_frontend/src/hooks/: useAuthClient.tsx  useLayoutManipulators.tsx  useLetterOptions.tsx  useLettersLib.tsx  usePalette.tsx  useTextGrid.tsx
src/smileyBall_frontend/src/modules/: NftsShowroom.tsx  SmileyBallConfigurable.tsx  SmileyBallSlideshow.tsx  modules.module.css
src/smileyBall_frontend/src/types/: Grid.ts  Letter.ts
src/smileyBall_frontend/src/utils/: index.ts
src/smileyball_backend/: Cargo.toml  smileyball_backend.did
src/smileyball_backend/src/: lib.rs
src/smileyball_frontend/: next.config.js  package.json  tsconfig.json
src/smileyball_frontend/src/app/: layout.tsx  page.tsx
src/smileyball_frontend/src/data/libs/: index.ts
src/smileyball_frontend/src/hooks/: useAuthClient.tsx  useLetterOptions.tsx  useTextGrid.tsx
src/smileyball_frontend/src/modules/: NftsShowroom.tsx
src/smileyball_frontend/src/utils/: index.ts
(+25 files in other folders)
