[package]
name = "smileyball_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
crc32fast = "1.3"
candid = "0.10.3"
ic-cdk = "0.12.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pocket-ic = "2.2.0"